@@ -3445,6 +3445,9 @@ and :pushd commands (and on startup if 'autochpos' is disabled in the vifmrc).
 l key in the ":history ." and ":trashes" menus are treated like :cd command.
 This option also affects marks so that navigating to a mark doesn't restore
 cursor position.
+
+When this option is enabled, more fine grained control over cursor position is
+available via 'histcursor' option.
 .TP
 .BI "'columns' 'co'"
 type: integer
@@ -3747,6 +3750,22 @@ or The Silver Searcher (https://github.com/ggreer/the_silver_searcher):
 
 .EE
 
+.TP
+.BI 'histcursor'
+type: set
+.br
+default: startup,dirmark,direnter
+.br
+Defines situations when cursor should be moved according to directory
+history:
+ \- startup  \- on loading file lists during startup
+ \- dirmark  \- after navigating to a mark that doesn't specify file
+ \- direnter \- on opening directory from a file list
+
+This option has no effect when 'autochpos' is disabled.
+
+Note that the list is not exhaustive and there are other situations when cursor
+is positioned automatically.
 .TP
 .BI "'history' 'hi'"
 type: integer
