@@ -41,6 +41,10 @@
 	windows of terminal multiplexers created by vifm down to file name instead
 	of using full path.  Thanks to mateusz28.
 
+	Added 'histcursor' option that gives partial control over when cursor is
+	positioned in accordance with record of directory history.  Thanks to
+	filterfalse and Dmitry Frank (a.k.a. dimonomid).
+
 	:quit, :wq, :exit, :xit, ZZ and ZQ now try to close current tab before
 	closing the application.
 
